--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "pics",
+    "name": "picsHolder",
     "version": "1.0.0",
     "description": "",
     "main": "index.js",
@@ -21,6 +21,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "http-errors": "^1.8.0",
+        "mongoose": "^5.11.8",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.6"
     }
