--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "homepage": "https://github.com/kingbbello/picsHolder#readme",
     "dependencies": {
+        "@hapi/joi": "^17.1.1",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "http-errors": "^1.8.0",
