--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "homepage": "https://github.com/kingbbello/picsHolder#readme",
     "dependencies": {
         "@hapi/joi": "^17.1.1",
+        "bcrypt": "^5.0.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "http-errors": "^1.8.0",
