--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "http-errors": "^1.8.0",
+        "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.8",
         "morgan": "^1.10.0",
         "nodemon": "^2.0.6"
