--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.8",
         "morgan": "^1.10.0",
-        "nodemon": "^2.0.6"
+        "nodemon": "^2.0.6",
+        "redis": "^3.0.2"
     }
 }
