--- a/package.json
+++ b/package.json
@@ -22,11 +22,15 @@
         "bcrypt": "^5.0.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "gridfs-stream": "^1.1.1",
         "http-errors": "^1.8.0",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.8",
         "morgan": "^1.10.0",
+        "multer": "^1.4.2",
+        "multer-gridfs-storage": "^4.2.0",
         "nodemon": "^2.0.6",
+        "path": "^0.12.7",
         "redis": "^3.0.2"
     }
 }
