--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
         "bcrypt": "^5.0.0",
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
+        "fs": "0.0.1-security",
         "gridfs-stream": "^1.1.1",
         "http-errors": "^1.8.0",
+        "javascript-obfuscator": "^2.10.1",
         "jsonwebtoken": "^8.5.1",
         "mongoose": "^5.11.8",
         "morgan": "^1.10.0",
